[package]
name = "miraland-nohash-hasher"
version = "0.2.1"
edition = "2021"
authors = ["Miraland Crafters <crafters@miraland.top>"]
license = "Apache-2.0 OR MIT"
description = "An implementation of `std::hash::Hasher` which does not hash at all."
repository = "https://github.com/miraland-labs/nohash-hasher"
documentation = "https://docs.rs/miraland-nohash-hasher"
readme = "README.md"
keywords = ["hash", "hasher", "hashmap", "hashset"]

[features]
default = ["std"]
std = []
